k8s/dev/argocd/argocd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
spec:
  type: LoadBalancer  # <-- this makes it accessible externally
  ports:
    - port: 443
      targetPort: 8080
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: argocd-server
